# auth

./: .gitignore  Cargo.toml  README.md  diesel.toml  requirements.txt  rust-toolchain.toml
better/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
better/docs/: features.md  index.md
better/src/: index.ts
better/src/lib/: auth.ts
crates/base/: Cargo.toml
crates/base/src/: lib.rs
crates/base/src/ctx/: mod.rs  settings.rs
crates/base/src/middleware/: client_info.rs
crates/base/src/pool/: redis.rs
crates/base/src/response/: errors.rs  success.rs
dj/authapp/: models.py
dj/authapp/migrations/: 0001_initial.py  0002_auto_20230826_1049.py  0002_auto_20230826_1142.py
dj/proj/: settings.py
etc/bruno/AuthRs/: AuthN Url Redirect.bru  bruno.json
etc/settings/: default.toml  settings-dev.toml
etc/supervisor/: dev.conf  prod.conf
etc/zsh/: auto.sh
oidc/: Cargo.toml
oidc/src/: lib.rs
oidc/src/controller/: mod.rs
oidc/src/db/: cache.rs
oidc/src/service/: callback.rs  login_with.rs  mod.rs  state.rs  tokens.rs
service/: Cargo.toml  index.html
service/ai/: Cargo.toml
service/ai/src/: apis.rs  lib.rs
service/auth/: Cargo.toml  login.html
service/auth/src/: communication.rs  controller.rs  email-template.html  error.rs  get_identities.rs  http.rs  jwt.rs  lib.rs  otp.rs  utils.rs
service/auth/src/github/: apis.rs  mod.rs
service/db/: Cargo.toml
service/db/src/: auth.rs  lib.rs  otp.rs  pg.rs  redis.rs  schema.rs  user.rs
service/src/: controller.rs  ctx.rs  errors.rs  lib.rs  main.rs  route.rs  router.rs  settings.rs
service/src/middleware/: client_info.rs
service/src/routes/: auth.rs  mod.rs
service/src/tracer/: mod.rs
