[workspace]
members = ["service", "service/db", "service/auth", "service/ai"]
exclude = ["etc", "dj"]
resolver = "2"

[workspace.dependencies]
thiserror = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde_derive = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-forest = { version= "0.1", features = [ "ansi", "smallvec", "serde", "tokio" ] }
hyper = {version = "1.8", features = ["full"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
http-body-util = "0.1"
