[workspace]
members = ["service", "service/db", "service/auth", "service/ai", "oidc", "crates/base"]
exclude = ["etc", "dj"]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
thiserror = "2.0"
anyhow = "1.0"
once_cell = "1"  # todo: to be removed
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde_derive = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-forest = { version= "0.1", features = [ "ansi", "smallvec", "serde", "tokio" ] }
hyper = {version = "1.8", features = ["full"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
http-body-util = "0.1"
config = "0.15"

# Storage and Database related deps
bb8 = "0.9"
sqlx = { version = "0.8", features = [
    "postgres",
    "chrono",
    "macros",
    "runtime-tokio",
] }
bb8-redis = "0.24"
