[workspace]
members = ["service", "service/db", "service/auth", "service/ai", "oidc", "crates/base"]
exclude = ["etc", "dj"]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
itertools = "0.14"
tower = "0.5"
thiserror = "2.0"
anyhow = "1.0"
once_cell = "1"  # todo: to be removed
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde_derive = "1"
hyper = {version = "1.8", features = ["full"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
http-body-util = "0.1"
config = "0.15"
percent-encoding = "2.3.1"
reqwest = { version = "0.12", features = ["json"] }
time = "0.3"
ulid = { version = "1.1", features = ["serde"] }
url = "2.5"





# Storage and Database related deps
bb8 = "0.9"
sqlx = { version = "0.8", features = [
    "postgres",
    "chrono",
    "macros",
    "runtime-tokio",
] }
bb8-redis = "0.24"


# Logs and tracing
tracing = "0.1.40"
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
tracing-opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.30", features = [
    "http-proto",
    "tls",
    "grpc-tonic",
    "metrics",
] }
opentelemetry-stdout = { version = "0.30", features = ["trace"] }
opentelemetry-semantic-conventions = "0.30"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-forest = { version= "0.1", features = [ "ansi", "smallvec", "serde", "tokio" ] }
