[package]
name = "service"
version = "0.1.0"
edition = "2021"
authors = [ "abrar.nitk@gmail.com" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
once_cell = "1"
serde = { version = "1", features = ["derive"]}
serde_json = { workspace = true }
serde_derive = { workspace = true }
futures = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-forest = { workspace = true }
dotenv = "0.15"
config = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }

db = { path = "./db" }
auth = { path = "./auth" }
ai = { path = "./ai" }
base = { path = "../crates/base" }
