[package]
name = "service"
version = "0.1.0"
edition = "2021"
authors = [ "abrar.nitk@gmail.com" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
once_cell = "1"
serde = { version = "1", features = ["derive"]}
serde_json = { workspace = true }
serde_derive = { workspace = true }
futures = "0.3"
dotenv = "0.15"
config = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }

db = { path = "./db" }
auth = { path = "./auth" }
ai = { path = "./ai" }
base = { path = "../crates/base" }


# Logs and tracing
tracing = {workspace = true }
opentelemetry = {workspace = true }
tracing-opentelemetry = {workspace = true }
opentelemetry-semantic-conventions = {workspace = true }
tracing-bunyan-formatter = {workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = [
    "http-proto",
    "tls",
    "grpc-tonic",
    "metrics",
] }
opentelemetry-stdout = { workspace = true, features = ["trace"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-forest = { workspace = true, features = [ "ansi", "smallvec", "serde", "tokio" ] }
