[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
hyper = { workspace = true }
url = "2"
tokio = { workspace = true }
once_cell = { workspace = true }
oauth2 = "4"

serde = { workspace = true, features = ["derive"]}
serde_json = { workspace = true }
serde_derive = { workspace = true }
