[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "serde_json"] }
thiserror = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"]}
serde_json = { workspace = true }
serde_derive = { workspace = true }
chrono = { workspace = true }
